[package]
name = "testbed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.5", features = ["gfx","use-vcpkg","static-link"] }
glow = "0.13.1"
imgui = "0.12.0"
imgui-glow-renderer = "0.12.0"
imgui-sdl2-support = "0.12.0"

# Engines
box2d3 = { path = ".." }

# For windows builds
[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "2024.05.24"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
