[package]
name = "testbed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.5"
glow = "0.13.1"
imgui = "0.12.0"
imgui-glow-renderer = { version = "0.12.0", default-features = false, features = [
    "gl_extensions_support",
    # BROKEN: "debug_message_insert_support",
    "bind_vertex_array_support",
    "vertex_offset_support",
    "clip_origin_support",
    "bind_sampler_support",
    "polygon_mode_support",
    "primitive_restart_support",
]}
imgui-sdl2-support = "0.12.0"

# Engines
box2d3 = { path = ".." }
wrapped2d = "0.4.2"

# For windows builds
[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "2024.05.24"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.sdl2]
version = "0.34.5"
features = ["use-vcpkg","static-link"]
